--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,7 @@
             "es2015"
         ],
         "jsx": "react-jsx"
+        "target": "ES5",
+        "downlevelIteration": true,
     }
 }
