--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
             "dom",
             "es2015"
         ],
-        "jsx": "react-jsx"
+        "jsx": "react-jsx",
         "target": "ES5",
         "downlevelIteration": true,
     }
