--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
-    "@mui/material": "6.3.1",
+    "@mui/material": "6.4.1",
+    "@mui/icons-material": "6.4.1",
     "@emotion/react": "11.14.0",
     "@emotion/styled": "11.14.0"
   },
