--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
   ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.0",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "6.4.1",
     "loader-utils": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-scripts": "5.0.1",
-    "@mui/material": "6.3.1",
-    "@emotion/react": "11.14.0",
-    "@emotion/styled": "11.14.0"
+    "react-scripts": "5.0.1"
   },
   "devDependencies": {
     "@types/react": "18.2.38",
